# AskPydantic

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
course/: Day_01_Ingest_and_Index_Your_Data.ipynb  Day_02_Chunking_and_Intelligent_Processing.ipynb  Day_03_Add_Search.ipynb  Day_04_Agents_and_Tools.ipynb  Day_05_Evaluation.ipynb  Day_06_Publish_Your_Agent.ipynb  Day_07_Share_Results.ipynb  pyproject.toml
course/app/: README.md  app.py  ingest.py  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
course/eval/: README.md  data-gen.ipynb  evaluations.ipynb
project/: Day_01_homework.ipynb  Day_02_homework.ipynb  Day_03_homework.ipynb  Day_04_homework.ipynb  Day_05_homework.ipynb  Day_06_homework.ipynb  Day_07_homework.ipynb  pyproject.toml
project/app/: README.md  app.py  ingest.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
project/eval/: README.md  data-gen.ipynb  evaluations.ipynb
