[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "minsearch>=0.0.10",
    "numpy>=2.4.3",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "pydantic-ai>=1.73.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.0",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
